@@ -8,6 +8,7 @@ CLASSPATH    =  $(top_builddir)/bindings/java:$(top_builddir)/bindings/java/clas
 JSRC  = com/muscat/om/OmObject.java			\
 	com/muscat/om/OmReturnObject.java		\
 	com/muscat/om/OmDatabaseGroup.java		\
+	com/muscat/om/OmDatabase.java			\
 	com/muscat/om/OmEnquire.java			\
 	com/muscat/om/OmDocument.java			\
 	com/muscat/om/OmKey.java			\
@@ -36,11 +37,13 @@ JSRC  = com/muscat/om/OmObject.java			\
 	com/muscat/om/OmInvalidArgumentError.java	\
 	com/muscat/om/OmDocNotFoundError.java		\
 	com/muscat/om/OmNetworkError.java		\
-	RunTest.java
+	RunTest.java					
+#	BackendManager.java
 
 JCLASSES  = com/muscat/om/OmObject.class			\
 	com/muscat/om/OmReturnObject.class		\
 	com/muscat/om/OmDatabaseGroup.class		\
+	com/muscat/om/OmDatabase.class 			\
 	com/muscat/om/OmEnquire.class			\
 	com/muscat/om/OmDocument.class			\
 	com/muscat/om/OmKey.class			\
@@ -68,8 +71,8 @@ JCLASSES  = com/muscat/om/OmObject.class			\
 	com/muscat/om/OmInvalidArgumentError.class	\
 	com/muscat/om/OmDocNotFoundError.class		\
 	com/muscat/om/OmNetworkError.class		\
-	Test.class					\
-	RunTest.class
+	RunTest.class                                   
+#	BackendManager.class
 
 # where to put the class files
 
